examples/bad/hold_break_outer.mko
// EXPECT: use of moved
// Labeled break outer after move poisons post-outer use.
fn consume(t: string) {}

fn main() {
    hold let s = "hi"
    let mut i = 0
    outer: while i < 3 {
        i = i + 1
        let mut j = 0
        while j < 2 {
            j = j + 1
            consume(s)
            break outer
        }
    }
    print(s)
}
